# handeye_calibration_with_depth_camera

./: README.md
easy_handeye_demo/: simlationdataresult  说明
easy_handeye_demo/launch/: calibrate.launch  calibrate_real.launch  calibratemoreindependent.launch
easy_handeye_demo/scripts/: tracking_simulator.py
prepareddata/: biaodingkuai3.stl
qr_code_icp/src/: realsense_readingpoindcloudsandsave.py
qr_code_icp/src/3dposedetection/: 3dpose.cpp  3dpose_forcalibration.cpp  CMakeLists.txt  label  package.xml  real_test.cpp
qr_code_icp/src/aruco_ros/aruco_ros/: CMakeLists.txt
qr_code_icp/src/aruco_ros/aruco_ros/launch/: double.launch  multi.launch  single.launch
qr_code_icp/src/aruco_ros/aruco_ros/src/: multi.cpp
